# wit-transforms

./: Cargo.toml
src/: lib.rs
tests/: smoke.rs
tests/enum/: input.wit  output.wit  transforms.json
tests/record/: input.wit  output.wit  transforms.json
tests/remove-func/: input.wit  output.wit  transforms.json
tests/replace-refs/: input.wit  output.wit  transforms.json
tests/resource/: input.wit  output.wit  transforms.json
tests/simple/: input.wit  output.wit  transforms.json
tests/type/: input.wit  output.wit  transforms.json
tests/variant/: input.wit  output.wit  transforms.json
tests/webgpu/: input.wit  output.wit  transforms.json
